--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">AppBucal360</string>
+    <string name="email">Ingrese su email</string>
+    <string name="password">Ingrese su contraseña</string>
+    <string name="register">Registrarse</string>
 </resources>
