--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,14 @@
     <string name="last_name">Ingrese su apellido</string>
     <string name="phone_number">Ingrese su telefono</string>
     <string name="birth_date">Ingrese su fecha nac.</string>
+    <string-array name="horas_disponibles">
+        <item>7:00am - 8:00am</item>
+        <item>8:00am - 9:00am</item>
+        <item>9:00am - 10:00am</item>
+    </string-array>
+    <string-array name="doctores_disponibles">
+        <item>Jampier Ventura</item>
+        <item>Diego Toribio</item>
+        <item>Paolo Leon</item>
+    </string-array>
 </resources>
