--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,8 +13,6 @@
         <item>9:00am - 10:00am</item>
     </string-array>
     <string-array name="doctores_disponibles">
-        <item>Jampier Ventura</item>
-        <item>Diego Toribio</item>
-        <item>Paolo Leon</item>
+        <item>Seleccione un doctor</item>
     </string-array>
 </resources>
